--- a/games/Assassin’s_Creed_IV.html
+++ b/games/Assassin’s_Creed_IV.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Assassin’s Creed IV Black Flag</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,22 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Assassin’s Creed IV Black Flag</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/242050/Assassins_Creed_IV_Black_Flag/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                <p>Рік - 1715. Пірати керують Карибським морем і створили власну беззаконну республіку, де корупція, жадібність та жорстокість є звичним явищем.
+                                                </br>Серед цих злочинців - зухвалий молодий капітан на ім'я Едвард Кенвей. Його боротьба за славу завоювала йому повагу серед легенд, як Чорна Борода, але також втягнула його в давню війну між вбивцями та тамплієрами, війну, яка може зруйнувати все, що побудували пірати.
+                                                </br>Ласкаво просимо до Золотого століття піратства.</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Стратегія, історія, убивця, паркур, відкритий світ, стелс, одиночна, повість, виживання, тактика, атмосфера, пригоди, пірати, фантастика</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="Assassin’s_Creed_IV/black_flag.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -67,24 +69,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>ОС: Windows XP or Windows Vista</td>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel Core2Quad Q8400 @ 2.6 GHz або AMD Athlon II X4 620 @ 2.6 GHz</td>
+                                        <td>Intel Core i5 2400S @ 2.5 GHz or better або AMD Phenom II x4 940 @ 3.0 GHz</td>
                                     </tr>
                                     <tr>
                                         <td>2 GB ОП</td>
                                         <td>4 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>Nvidia Geforce GTX 260 or AMD Radeon HD 4870</td>
+                                        <td>Nvidia GeForce GTX 470 or AMD Radeon HD 5850</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>30 GB доступного місця</td>
+                                        <td>30 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
@@ -94,7 +96,7 @@
                             <div class="form">
                                     <img src="../icons/very_bed.png" alt="">
                                         <div class="result_f" id="result_v_b" >
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/very_bed.txt">
+                                            <embed src="../games/Assassin’s_Creed_IV/very_bed.txt">
                                         </div>
                                     <input id="radio-1" type="radio" name="radio" value="value1">
                                     <label for="radio-1">VERY BED</label>
@@ -102,7 +104,7 @@
                                 <div class="form">
                                     <img src="../icons/bed.png" alt="">
                                         <div class="result_f" id="result_b">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/bed.txt">
+                                            <embed src="../games/Assassin’s_Creed_IV/bed.txt">
                                         </div>
                                     <input id="radio-2" type="radio" name="radio" value="value2">
                                     <label for="radio-2">BED</label>
@@ -110,7 +112,7 @@
                                 <div class="form">
                                     <img src="../icons/so_so.png" alt="">
                                          <div class="result_f" id="result_s">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/so_so.txt">
+                                            <embed src="../games/Assassin’s_Creed_IV/so_so.txt">
                                          </div>
                                     <input id="radio-3" type="radio" name="radio" value="value3">
                                     <label for="radio-3">SO-SO</label>
@@ -118,7 +120,7 @@
                                 <div class="form">
                                     <img src="../icons/good.png" alt="">
                                         <div class="result_f" id="result_g" value="4">
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/good.txt">
+                                            <embed src="../games/Assassin’s_Creed_IV/good.txt">
                                         </div>
                                     <input id="radio-4" type="radio" name="radio" value="value4">
                                     <label for="radio-4">GOOD</label>
@@ -126,7 +128,7 @@
                                 <div class="form">
                                     <img src="../icons/very good.png" alt="">
                                         <div class="result_f" id="result_v_g" >
-                                            <embed src="../games/The_Elder_Scrolls_V_Skyrim/very_bed.txt">
+                                            <embed src="../games/Assassin’s_Creed_IV/very_bed.txt">
                                         </div>
                                     <input id="radio-5" type="radio" name="radio" value="value5">
                                     <label for="radio-5">VERY GOOD</label>
