--- a/games/Railway_Empire.html
+++ b/games/Railway_Empire.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Railway Empire</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,20 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Railway Empire</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/503940/Railway_Empire/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>Сполучені Штати, 1830: „Новий світ” перебуває на вищій позиції. Промисловість процвітає, і гонка йде за створенням найбільш пануючої та найпотужнішої залізничної імперії у всій Північній Америці. Пора передумати і перевершити своїх конкурентів, коли ви ведете свою компанію в 20 століття!</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Стратегія, історія, одиночна, розбудова міста, повість, дипломатія, крафт</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="Railway_Empire/Railway Empire.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -67,24 +67,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>ОС: Windows XP or Windows Vista</td>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel Core i5 750 @ 2.6 GHz або AMD Phenom II X4 @ 3.2 GHz</td>
+                                        <td>Intel Core i5 2400s @ 2.5 GHz або AMD FX 4100 @ 3.6</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
                                         <td>4 GB ОП</td>
+                                        <td>8 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>NVIDIA GeForce GTX460 або AMD Radeon HD5870</td>
+                                        <td>NVIDIA GeForce GTX 680 або AMD Radeon HD7970 і краще</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>7 GB доступного місця</td>
+                                        <td>7 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
