--- a/games/The_Elder_Scrolls_online.html
+++ b/games/The_Elder_Scrolls_online.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>The Elder Scrolls Online</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,20 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>The Elder Scrolls Online</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/306130/The_Elder_Scrolls_Online/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
+                                                 <p>Насолоджуйтесь історією,що постійно розвивається, по всьому Тамріелю в The Elder Scrolls Online, популярній онлайн-RPG. Досліджуйте багатий, живий світ із друзями або вступайте в сольну пригоду. Насолоджуйтесь повним контролем над тим, як ваш персонаж виглядає та грає, від зброї, якою ви володієте, до навиків, які ви вивчаєте. Вибір, який ви зробите, буде визначати вашу долю. Ласкаво просимо у світ без обмежень.</p>
                                         </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Фантаска, магія, відкритий світ, мультиплеєр, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, крафт, головоломка.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="The_Elder_Scrolls_online/skyrim.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -71,20 +71,24 @@
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel® Core i3 540 або AMD A6-3620</td>
+                                        <td>Intel® Core i5 2300 або AMD FX4350</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
-                                        <td>4 GB ОП</td>
+                                        <td>3 GB ОП</td>
+                                        <td>8 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>Відеокарта, сумісна зDirect X 11.0, з 1GB RAM (NVidia GeForce 460 або AMD Radeon 6850)</td>
+                                        <td>Відеокарта, сумісна зDirect X 11.0, з2GB RAM (NVIDIA® GeForce® GTX 750 або AMD Radeon™ HD 7850) і більше</td>
                                     </tr>
+                                    <tr>
+                                            <td>Широкосмугове підключення до інтернету</td>
+                                            <td>Широкосмугове підключення до інтернету</td>
+                                        </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>85 GB доступного місця</td>
+                                        <td>85 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
