--- a/games/crysis3.html
+++ b/games/crysis3.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Crysis 3</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,20 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Crysis 3</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/1282690/Crysis_3/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>Доля світу у ваших руках. Нові та старі вороги загрожують світу, якого ви так наполегливо досягли 24 роки тому. Ваші пошуки альфа-цефа продовжуються, але цього разу вам також доведеться викрити правду, яка стоїть за корпорацією C.E.L.L. Це буде непросто, але ваш нанокостюм допоможе вам розчистити шлях до перемоги. Проведіть стелс атаку, щоб тихо перемогти своїх супротивників, або знищіть ворога за допомогою неймовірної сили. Немає неправильного способу врятувати світ.</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Шутер, інопланетяни, від 1 лиця, постапокаліпсис, атмосфера, наукова фантастика, стелс, відкритий світ, одиночна.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="crysis3/crysis.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -71,20 +71,20 @@
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>2.4 GHz Intel Core 2 Duo / 2.7 GHz AMD Athlon 64X2</td>
+                                        <td> 2.4 GHz Intel Core i5-750 / 2.7 GHz AMD Phenom II X4 805</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
+                                        <td>3 GB ОП</td>
                                         <td>4 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>1 GB Video RAM or better / NVidia GTS 450 or AMD Radeon HD5770</td>
+                                        <td>1 GB Video RAM or better / NVidia GTX560 or AMD Radeon HD5870</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>17 GB доступного місця</td>
+                                        <td>17 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
