--- a/games/cs_go.html
+++ b/games/cs_go.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Counter-Strike: Global Offensive</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,21 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Counter-Strike: Global Offensive</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>Counter-Strike: Global Offensive (CS: GO) далі розвиває командний бойовий ігролад, що привів серію до успіху багато років тому.
+                                                    CS: GO пропонує нові мапи, персонажів і зброю, а також оновлені версії класичного вмісту CS (de_dust2 тощо). Окрім того, в CS: GO введені нові ігрові режими, пошук матчів, таблиці лідерів і багато іншого.</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Шутер, від 1 лиця, тактика, стратегія, мультиплеєр, кооператив, війна, підтримка модифікацій.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="cs_go/csgo.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -67,24 +68,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>ОС: Windows® 7/Vista/XP</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel® Core™ 2 Duo E6600 або AMD Phenom™ X3 8750</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>2 GB ОП</td>
-                                        <td>4 GB ОП</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td> ATI Radeon HD 2400 / NVidia 8600M</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>15 GB доступного місця</td>
+                                        <td>-</td>
                                     </tr>
                                 </table>
                                 </div>
