--- a/games/dota2.html
+++ b/games/dota2.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>DOTA2</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,22 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Dota 2</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/570/Dota_2/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>Найпопулярніша гра Steam. </br>
+                                                 Усі герої задарма. </br>
+                                                Змагальна рівновага — головна перлина Dota, і для того, щоби всі мали рівні можливості, основний вміст гри — як-от, величезний вибір героїв — доступний усім гравцям. Шанувальники можуть збирати декоративні предмети для персонажів та кумедні доповнення для їхнього світу, але все необхідне, щоби приєднатися до першого матчу, вже міститься в грі.</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Симулятор, стратегія, тактика, кооператив, налаштування персонажу, фентезі.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="dota2/dota_logo.png" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -68,23 +70,27 @@
                                     </tr>
                                     <tr>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel Dual core або AMD at 2.8 GHz</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
                                         <td>4 GB ОП</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>NVIDIA GeForce 8600/9600GT, ATI/AMD Radeon HD2600/3600</td>
+                                        <td>-</td>
                                     </tr>
+                                    <tr>
+                                            <td>Широкосмугове підключення до інтернету</td>
+                                            <td>-</td>
+                                        </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>15 GB доступного місця</td>
+                                        <td>-</td>
                                     </tr>
                                 </table>
                                 </div>
