--- a/games/Assassin's_Creed_Odyssey.html
+++ b/games/Assassin's_Creed_Odyssey.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Assassin's Creed Odyssey</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,22 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Assassin's Creed Odyssey</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/812140/Assassins_Creed_Odyssey/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                <p>Від ізгоя до живої легенди, вирушайте в одісею, щоб розкрити таємниці свого минулого та змінити долю Стародавньої Греції.
+                                                Від пишних яскравих лісів до вулканічних островів та жвавих міст, розпочніть мандрівку дослідженням та зустрічами у розірваному війною світі, сформованому богами та людьми.        
+                                                Ваші рішення вплинуть на те, як розгортається ваша одісея. Пройдіть кілька кінців завдяки новій системі діалогу та вибору, який ви робите.</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Стратегія, історія, убивця, відкритий світ, стелс, паркур, дорослий вміст, одиночна, повість, виживання, тактика, атмосфкра, пригоди, крафт, фантастика</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="Assassin's_Creed_Odyssey/odysset.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -67,24 +69,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
+                                        <td>ОС: Windows XP or Windows Vista</td>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>AMD FX 6300 @ 3.8 GHz, Ryzen 3 - 1200, Intel Core i5 2400 @ 3.1 GHz</td>
+                                        <td>AMD FX-8350 @ 4.0 GHz, Ryzen 5 - 1400, Intel Core i7-3770 @ 3.5 GHz</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
-                                        <td>4 GB ОП</td>
+                                        <td>8 GB ОП</td>
+                                        <td>8 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>AMD Radeon R9 285, NVIDIA GeForce GTX 660</td>
+                                        <td>AMD Radeon R9 290, NVIDIA GeForce GTX 970</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>46+ GB доступного місця</td>
+                                        <td>46+ GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
