--- a/games/Fallout_4.html
+++ b/games/Fallout_4.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Fallout 4</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,22 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Fallout 4</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/377160/Fallout_4/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>Bethesda Game Studios, відзначені нагородами творці Fallout 3 та The Elder Scrolls V: Skyrim, вітають вас у світі Fallout 4 - їх найпопуллярніші ігри в історії та наступного покоління ігор з відкритим світом.
+                                                 </br>
+                                                    Як єдиний виживший сховища 111, ви потрапляєте у світ, зруйнований ядерною війною. Кожна секунда - це боротьба за виживання, і кожен вибір за вами. Лише ви можете відновити і визначити долю Пустоші. Ласкаво просимо додому.</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Відкритий світ, одиночна, атмосверна, від 1 лиця, від 3 лиця, фентезі, пригоди, постапокаліпсис, шутер, тактика, розбудова міста, дослідження, крафт.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="Fallout_4/fallaut4.png" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -71,20 +73,20 @@
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>ntel Core i5-2300 2.8 GHz/AMD Phenom II X4 945 3.0 GHz or equivalent</td>
+                                        <td>Intel Core i7 4790 3.6 GHz/AMD FX-9590 4.7 GHz or equivalent</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
-                                        <td>4 GB ОП</td>
+                                        <td>6 GB ОП</td>
+                                        <td>8 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>NVIDIA GTX 550 Ti 2GB/AMD Radeon HD 7870 2GB or equivalent</td>
+                                        <td>NVIDIA GTX 780 3GB/AMD Radeon R9 290X 4GB or equivalent</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>30 GB доступного місця</td>
+                                        <td>30 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
