--- a/games/Shadow_Tactics.html
+++ b/games/Shadow_Tactics.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Shadow Tactics</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,20 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Shadow Tactics: Blades of the Shogun</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/1579380/Shadow_Tactics_Blades_of_the_Shogun__Aikos_Choice/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>У стилі основної гри ви берете під свій контроль команду смертоносних фахівців, щоб проникнути в тінь між десятками ворогів. Вибирайте свій підхід при проникненні на ворожі бази в таємні лісові табори чи жваві містечка періоду Едо. Влаштовуйте пастки, отруюйте та відволікайте своїх опонентів - або повністю уникайте контактів ворога. Ретельно сплануйте кожен свій крок і придумайте власну винахідливу тактику, щоб перемогти ворогів і виконати кожну складну місію, яка попереду!</p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Стратегія, історія, убивця, стелс, одиночна, повість, виживання, тактика, атмосфкра, пригоди</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="Shadow_Tactics/Shadow Tactics.jpg" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -67,24 +67,24 @@
                                         <td>РЕКОМЕНДОВАНІ:</td>
                                     </tr>
                                     <tr>
-                                        <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
+                                        <td>ОС: Windows XP or Windows Vista</td>
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel i3 2nd-Generation 2.5GHz, AMD Quad-Core 2.5GHz</td>
+                                        <td>Intel i3 4th-Generation 3.5GHz, AMD Quad-Core 3.9GHz</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
                                         <td>4 GB ОП</td>
+                                        <td>6 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>Nvidia GT640, AMD Radeon HD7750, 1GB Vram</td>
+                                        <td>Nvidia GTX 570, AMD Radeon HD 6950, 2GB Vram</td>
                                     </tr>
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>13 GB доступного місця</td>
+                                        <td>13 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
