--- a/games/gta5.html
+++ b/games/gta5.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>The  Elder Scrolls V:Skyrim</title>
+    <title>Grand Theft Auto V</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -43,20 +43,21 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
+                                            <h2><span>Grand Theft Auto V</span></h2>
                                         <div class="autors" id="autors">
-                                                <p>Джерело: <span><a href="https://elderscrolls.fandom.com/"> elderscrolls.fandom.com</a></span></p>
+                                                <p>Джерело: <span><a href="https://store.steampowered.com/app/271590/Grand_Theft_Auto_V/"> store.steampowered.com</a></span></p>
                                         </div>    
                                         <div class="anotation" id="anotation">
-                                                 <p>На початку сюжетної лінії персонаж гравця виявляється одним з ув'язнених (власне, як і у всіх попередніх частинах), якого везуть на страту за те, що він незаконно перетнув кордони Скайріму у воєнний час. Як тільки протагоніст кладе свою голову на плаху, дракон Алдуіна нападає на поселення. А далі чекатиме безкінечне бродіння, цікаі квести, наповнений світ і чимало іншого.</p>
-                                        </div>
+                                                 <p>Коли молодий хуліган, колишній грабіжник банків і неврівноважений психопат починають свою гру з безумними ватажками кримінального світу, владою США та індустрією розваг, їм доведеться провернути парочку небезпечних пограбувань, щоб вижити в жорстокому місті, де не можна довіряти нікому, а особливо один одному.
+                                                    </p>
+                                           </div>
                                         <div class="tegs" id="tegs">
                                             <span>Теги:</span>
-                                            <p>Фантаска, магія, відкритий світ, одиночна, від першого лиця, від третьго лиця, налаштування персонажу, дракони, стелс, холодна зброя, підтримка модифіацій, крафт, головоломка.</p>
+                                            <p>Шутер, відкритий світ, одиночна, стелс, полювання, перегони, від 3 лиця, виживання, пригоди, дорослий вміст, кримінал, паркур.</p>
                                     </div>
                                     </div>
                                     <div class="title_img" id="title_img">
-                                        <img src="The_Elder_Scrolls_V_Skyrim/skyrim.jpg" alt="">
+                                        <img src="gta5/gta.png" alt="">
                                         </div>
                                 </div>
                                 <div class="article_text" id="article_text">
@@ -71,20 +72,21 @@
                                         <td>ОС: Windows 7/8.1/10 (64-bit Version)</td>
                                     </tr>
                                     <tr>
-                                        <td>Intel Core 2 Duo 2 GHz</td>
-                                        <td>Intel Core i5 2 GHz</td>
+                                        <td>Intel Core 2 Quad Q6600 (4 ядра) з частотою 2,40 ГГц або AMD Phenom 9850 (4 ядра) з частотою 2,5 ГГц Пам'ять: 4 ГБ</td>
+                                        <td>Intel Core i5 3470 (4 ядра) з частотою 3,2 ГГц або AMD X8 FX-8350 (8 ядер) з частотою 4 ГГц</td>
                                     </tr>
                                     <tr>
-                                        <td>2 GB ОП</td>
                                         <td>4 GB ОП</td>
+                                        <td>8 GB ОП</td>
                                     </tr>
                                     <tr>
-                                        <td>NVIDIA GeForce 8800 GT</td>
-                                        <td>ATI Radeon HD 5850/NVIDIA GeForce GTX 460</td>
+                                        <td>NVIDIA 9800 GT або AMD HD 4870 з 1 ГБ пам'яті (DX 10, 10.1, 11)</td>
+                                        <td>NVIDIA GTX 660 або AMD HD7870 з 2 ГБ пам'яті</td>
                                     </tr>
+               
                                     <tr id="last">
-                                        <td>6 GB доступного місця</td>
-                                        <td>12 GB доступного місця</td>
+                                        <td>72 GB доступного місця</td>
+                                        <td>72 GB доступного місця</td>
                                     </tr>
                                 </table>
                                 </div>
